# cf2tf

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  README.md  markdown.py  mypy.ini  noxfile.py  pipeline.groovy  poc.py  pyproject.toml  qs_hugo.yml  renovate.json  todo
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: pr_checks.yml  release.yml  test.yml
.scripts/: bump.py  requirements.txt
src/cf2tf/: app.py  convert.py  save.py
src/cf2tf/cloudformation/: __init__.py  _template.py  functions.py
src/cf2tf/conversion/: expressions.py  overrides.py
src/cf2tf/terraform/: __init__.py  _configuration.py  blocks.py  code.py  doc_file.py  hcl2.py
src/cf2tf/terraform/hcl2/: __init__.py  _block.py  complex.py  custom.py  primitive.py
src/cf2tf/tests/test_conversions/: test_expressions.py
tests/: test_app.py  test_convert.py
tests/data/: log_bucket.yaml
tests/data/templates/: CloudExchangeTemplate.yaml  MoodleQuickStart.yml  api-lambda.cfn.json  aws-ecr-continuouscompliance-v1.yaml  aws-instance-scheduler.template  aws-trusted-advisor-explorer.template  aws_central_logging.json  cloud.yaml  cloudtrail.yaml.txt  conversions-api-gateway.eks_multiaccount_dual_nat.yaml  crawler-cfn.yml  depopry.yaml  iam.yaml  instance_state.yaml  latest.yaml  live-streaming-on-aws.template  minecraft.yml  platform-aurora-cluster.cf.txt
tests/test_conversion/: test_expressions.py
tests/test_conversions/: test_expressions.py
tests/test_functional/: test_conversion.py
tests/test_terraform/: test_code.py  test_configuration.py  test_hcl2.py
tests/test_terraform/test_hcl2/: test_block.py
