[tool.poetry]
name = "cf2tf"
version = "0.1.0"
description = "Convert Cloudformation Templates to Terraform."
authors = ["Levi Blaney <shadycuz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cfn-flip = "^1.3.0"
PyYAML = "^6.0"
click = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
