[tool.poetry]
name = "cf2tf"
version = "0.0.0"
description = "Convert Cloudformation Templates to Terraform."
readme = "README.md"
authors = ["Levi Blaney <shadycuz@gmail.com>"]
repository = "https://github.com/DontShaveTheYak/cf2tf"
keywords = ["cloudformation", "terraform", "cf2tf", "convert", "cloud", "conversion"]
license = "GPL-3.0-only"

[tool.poetry.scripts]
cf2tf = "cf2tf.app:cli"

[tool.poetry.dependencies]
python = "^3.7"
cfn-flip = "^1.3.0"
PyYAML = "^6.0"
click = "^8.1.2"
GitPython = "^3.1.27"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}
click-log = "^0.4.0"
requests = "^2.27.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
coverage = {extras = ["toml"], version = "^6.4.2"}
pytest-cov = "^3.0.0"
mypy = "^0.961"
typing-extensions = { version = "^4.2.0", python = "~3.7" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cf2tf"]

[tool.coverage.report]
show_missing = true
